--- a/chap2.tex
+++ b/chap2.tex
@@ -1,1 +1,3 @@
-Electromagnetism affects only charged particles, such as electrons and protons. Electrons, protons and neutrons have charges that are integer multiples of the elementary charge, $e$
+\chapter{Gauss's Law}
+
+Lora sucks
