--- a/main.tex
+++ b/main.tex
@@ -97,9 +97,9 @@ Physics 230 Notes\\ % Document name
 \section{Background Information}
 \subsection{Electromagnetism}
 Electromagnetism affects only charged particles, such as electrons and protons. Electrons, protons and neutrons have charges that are integer multiples of the elementary charge, $e$
-\chapter{Gauss's Law}
 
-\subfile{chapters/chap2.tex}
+
+\subfile{Chapters/chap2.tex}
 
 \chapter{Electric Potential}
 \chapter{Capacitance and Dielectrics}
