--- a/main.tex
+++ b/main.tex
@@ -93,24 +93,19 @@ Physics 230 Notes\\ % Document name
 \pagenumbering{arabic}
 \pagestyle{mypagestyle}
 
-\chapter{Electric Charge and Electric Field}
-\section{Background Information}
-\subsection{Electromagnetism}
-Electromagnetism affects only charged particles, such as electrons and protons. Electrons, protons and neutrons have charges that are integer multiples of the elementary charge, $e$
 
-
+\subfile{Chapters/chap1.tex}
 \subfile{Chapters/chap2.tex}
-
-\chapter{Electric Potential}
-\chapter{Capacitance and Dielectrics}
-\chapter{Current, Resistance, and Electromotive Force}
-\chapter{Direct-Current Circuits}
-\chapter{Magnetic Field and Magnetic Forces}
-\chapter{Sources of Magnetic Field}
-\chapter{Electromagnetic Induction}
-\chapter{Inductance}
-\chapter{Alternating Current}
-\chapter{Electromagnetic Waves}
+\subfile{Chapters/chap3.tex}
+\subfile{Chapters/chap4.tex}
+\subfile{Chapters/chap5.tex}
+\subfile{Chapters/chap6.tex}
+\subfile{Chapters/chap7.tex}
+\subfile{Chapters/chap8.tex}
+\subfile{Chapters/chap9.tex}
+\subfile{Chapters/chap10.tex}
+\subfile{Chapters/chap11.tex}
+\subfile{Chapters/chap12.tex}
 
 
 \end{document}
