--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 % Line spacing
 \renewcommand{\baselinestretch}{1.5} 
 
+
 % Title page
 \title{\textbf{\Huge{ \begin{center}
 Physics 230 Notes\\ % Document name
@@ -95,17 +96,18 @@ Physics 230 Notes\\ % Document name
 
 
 \subfile{Chapters/chap1.tex}
-\subfile{Chapters/chap2.tex}
-\subfile{Chapters/chap3.tex}
-\subfile{Chapters/chap4.tex}
-\subfile{Chapters/chap5.tex}
-\subfile{Chapters/chap6.tex}
-\subfile{Chapters/chap7.tex}
-\subfile{Chapters/chap8.tex}
-\subfile{Chapters/chap9.tex}
-\subfile{Chapters/chap10.tex}
-\subfile{Chapters/chap11.tex}
-\subfile{Chapters/chap12.tex}
+%\subfile{Chapters/chap2.tex}
+
+\chapter{Electric Potential}
+\chapter{Capacitance and Dielectrics}
+\chapter{Current, Resistance, and Electromotive Force}
+\chapter{Direct-Current Circuits}
+\chapter{Magnetic Field and Magnetic Forces}
+\chapter{Sources of Magnetic Field}
+\chapter{Electromagnetic Induction}
+\chapter{Inductance}
+\chapter{Alternating Current}
+\chapter{Electromagnetic Waves}
 
 
 \end{document}
