lora sucks at LaTeX

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, letterpaper, titlepage, fleqn]{report}
+\documentclass[11pt, letterpaper, titlepage]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \usepackage{color,graphicx,overpic} 
@@ -13,13 +13,13 @@
 \geometry{top=2.54cm, left=2.1cm, right=2.1cm, bottom=2.1cm}
 
 % Indentation/space between paragraphs
-\setlength{\headheight}{15pt}
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{0pt}
+\setlength{\headheight}{12pt}
+\renewcommand{\baselinestretch}{1.5} 
+\setlength{\parskip}{0.3cm}
+\setlength{\parindent}{0.6cm}
 
 % Line spacing
-\renewcommand{\baselinestretch}{1.5} 
-
+\renewcommand{\baselinestretch}{2} 
 
 % Title page
 \title{\textbf{\Huge{ \begin{center}
