--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@ Physics 230 Notes\\ % Document name
 
 
 \subfile{Chapters/chap1.tex}
-%\subfile{Chapters/chap2.tex}
+\subfile{Chapters/chap2.tex}
 
 \chapter{Electric Potential}
 \chapter{Capacitance and Dielectrics}
