--- a/main.tex
+++ b/main.tex
@@ -101,29 +101,40 @@ Gauss's law states that the outward flux of the electric field through a closed 
 \begin{equation}
 \Phi_E \equiv \oint \vec{E}\cdot \di \vec{A} = \frac{Q_{encl}}{\epsilon_0}.
 \end{equation}
+Let us examine what this equation means.
 
-The total flux through a closed surface and the air mass flux can be calculated using
+We define the \textbf{mass flux} through a surface via
 \begin{equation}
-\Phi_E = \oint\rho_m \vec{V} \cdot \di \vec{A},
+\Phi_M = \dfrac{\di M}{\di t},
 \end{equation}
-where $\rho_m$ is the mass density and $\vec{V}$ is the velocity. The \textbf{electric flux} is analogous to mass flux, given by
+where $M$ is the mass and $t$ is time. The surface that we pick to evaluate the flow through is sometimes called a \textit{Gaussian surface}. We also always consider a \textit{stationary} situation, where things do not change with time at a given location. Flux is essentially anything measurable that can be transported (ex. mass, momentum, energy, heat, etc.). The \textbf{mass flux} through a surface can be calculated with a surface integral via
 \begin{equation}
-\Phi_M = \int \rho_m \vec{v} \di \vec{A}.
+\Phi_M = \int \rho_m \vec{v} \cdot \di \vec{A},
 \end{equation}
-
+where $\rho_m$ is the mass density and $\vec{V}$ is the velocity. For a tilted surface, the mass flux can be calculated as
+\begin{equation}
+\Phi_M = \rho_M \vec{v} \cdot \vec{A}.
+\end{equation}
 When no mass is created or destroyed, we have that
 \begin{equation}
 \Phi_M = \frac{-\di M_{encl}}{\di t}.
 \end{equation}
-and if it is also stationary. $\Phi_M = 0$
+Note that for any \textit{closed surface}, the mass flux is always zero if the flow is stationary and if there is no creation of air, i.e.,
+\begin{equation}
+\Phi_M = 0.
+\end{equation} 
+This is analogous to Gauss's law for a closed surface with no charges inside, i.e.,
+\begin{equation}
+\Phi_E = \oint \vec{E} \cdot \di \vec{A} = \dfrac{Q_\text{encl}}{\epsilon_0} = 0.
+\end{equation}
 
 Mass creation is when:
 \begin{equation}
-\Phi_m + \frac{\di M}{\di t} > 0
+\Phi_M + \frac{\di M}{\di t} > 0
 \end{equation}
 Mass destruction is when
 \begin{equation}
-\Phi_m + \frac{\di M}{\di t} < 0
+\Phi_M + \frac{\di M}{\di t} < 0
 \end{equation}
 
 Conservation of charge
@@ -143,7 +154,7 @@ Gauss's law and spherical symmetry. Using coulomb's law for one charge
 
 For more than one charge, you need to do superposition
 
-Every region totally inside a conductor is neutral. Excess charge all lies on the surface (static). An interior surface of a conductor, surrounding a cavity, only has charge if there is nonzero charge inside the cavity; the two charges cancel
+Every region totally inside a conductor is neutral. Excess charge all lies on the surface (static). An interior surface of a conductor, surrounding a cavity, only has charge if there is non-zero charge inside the cavity; the two charges cancel
 
 Spherical symmetry
 
