--- a/main.tex
+++ b/main.tex
@@ -130,21 +130,21 @@ This is analogous to Gauss's law for a closed surface with no charges inside, i.
 
 Mass creation is when:
 \begin{equation}
-\Phi_M + \frac{\di M}{\di t} > 0
+\Phi_M + \frac{\di M}{\di t} > 0,
 \end{equation}
-Mass destruction is when
+and mass destruction is when
 \begin{equation}
-\Phi_M + \frac{\di M}{\di t} < 0
-\end{equation}
-
-Conservation of charge
-\begin{equation}
-\Phi_Q + \frac{\di Q}{\di t} = 0
+\Phi_M + \frac{\di M}{\di t} < 0.
 \end{equation}
 
-Second Law of thermodynamics is when
+Conservation of charge states that
 \begin{equation}
-\Phi_S + \frac{\di S}{\di t} \geq 0
+\Phi_Q + \frac{\di Q}{\di t} = 0.
+\end{equation}
+
+Second Law of thermodynamics states that
+\begin{equation}
+\Phi_S + \frac{\di S}{\di t} \geq 0.
 \end{equation}
 
 Gauss's law and spherical symmetry. Using coulomb's law for one charge
@@ -156,7 +156,7 @@ For more than one charge, you need to do superposition
 
 Every region totally inside a conductor is neutral. Excess charge all lies on the surface (static). An interior surface of a conductor, surrounding a cavity, only has charge if there is non-zero charge inside the cavity; the two charges cancel
 
-Spherical symmetry
+Spherical symmetry 
 
 
 \subfile{Chapters/chap2.tex}
