--- a/main.tex
+++ b/main.tex
@@ -105,8 +105,7 @@ Physics 230 Notes\\ % Document name
 
 
 \subfile{Chapters/chap7.tex}
-
-\chapter{Sources of Magnetic Field}
+\subfile{Chapters/chap8.tex}
 \chapter{Electromagnetic Induction}
 \chapter{Inductance}
 \chapter{Electromagnetic Waves}
